# vyse-demo

./: DEPLOY.md  package.json  render.yaml  turbo.json
apps/api/: pyproject.toml
apps/api/tests/: test_scoring.py
apps/api/vyse_api/: __init__.py  auth.py  db.py  deps.py  middleware.py  scoring.py
apps/api/vyse_api/routers/: billing.py  competitors.py  flow.py  forge.py  posts.py  vault.py
apps/api/vyse_api/worker/: jobs.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: layout.tsx
apps/web/app/(app)/competitors/: page.tsx
apps/web/app/(app)/forge/: page.tsx
apps/web/app/(app)/outliers/: page.tsx
apps/web/app/(app)/posts/[id]/: page.tsx
apps/web/components/ui/: primitives.tsx
apps/web/lib/: api.ts  utils.ts
vyse-deploy-ready/vyse/: Makefile  README.md  docker-compose.yml
vyse-deploy-ready/vyse/apps/api/: Dockerfile
vyse-deploy-ready/vyse/apps/api/vyse_api/: ai.py  enqueue.py  main.py  models.py  schemas.py  scraper.py  settings.py
vyse-deploy-ready/vyse/apps/api/vyse_api/routers/: insights.py  webhooks.py
vyse-deploy-ready/vyse/apps/api/vyse_api/worker/: main.py
vyse-deploy-ready/vyse/apps/web/: next.config.ts
vyse-deploy-ready/vyse/apps/web/app/: globals.css
vyse-deploy-ready/vyse/apps/web/app/(app)/: layout.tsx
vyse-deploy-ready/vyse/apps/web/app/(app)/dashboard/: page.tsx
vyse-deploy-ready/vyse/apps/web/app/(app)/flow/: page.tsx
vyse-deploy-ready/vyse/apps/web/app/(app)/posts/: page.tsx
vyse-deploy-ready/vyse/apps/web/components/: paste-url-bar.tsx  sidebar.tsx
(+3 files in other folders)
