[project]
name = "vyse-api"
version = "0.1.0"
description = "VYSE backend — competitor content intelligence API + worker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.3",
  "redis>=5.0",
  "arq>=0.26",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "openai>=1.40",
  "stripe>=10.0",
  "tenacity>=8.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]
scraper = ["playwright>=1.45"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
